stage | GIDK-2bbg5h | Aditi | Alignment issue on create new company

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -7969,6 +7969,10 @@ ul#dropdown-nested .dropdown-menu li:hover .dropdown-item {
     width: 120px !important;
 }
 
+.create-select .menu{
+    width: 142px !important; 
+}
+
 .select-caret:after,
 .select-caret .form-control:after {
     content: "";
